--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -4,7 +4,7 @@
 <div id="typing-text" class="light-mode-text animated-text">
   <h1>Hello👋</h1>
   <p>My name is Wajhat Syed</p>
-  <p>💎Welcome to my portfolio website💎</p>
+  <p>I'm working towards becoming a cloud engineer, and I live in South Korea</p>
 </div>
 
 <script>
@@ -16,7 +16,7 @@
 
   #typing-text {
     overflow: hidden;
-    white-space: nowrap;
+    white-space: normal;
     width: 100%;
     text-align: center; 
     position: absolute; 
