--- a/templates/blogs/portfolio.html
+++ b/templates/blogs/portfolio.html
@@ -1,7 +1,8 @@
 {% extends 'index.html' %}
 {% block content %}
 <div class="container mt-5 mb-5 light-mode-text animated-text">
-    <h1>Projects</h1>
+    <h1>Projects ✨</h1>
+    <p>A selection of projects I've worked on, as a student working towards a cloud specialist</p>
     <div id="repositories" class="row"></div>
 </div>
 
