--- a/templates/blogs/index.html
+++ b/templates/blogs/index.html
@@ -1,7 +1,8 @@
 {% extends 'index.html' %}
 {% block content %}
 <div class="container mt-5 mb-5 light-mode-text animated-text">
-    <h1>Blogs</h1>
+    <h1>Blogs ✍</h1>
+    <p>I share anything that may help others, technologies I'm using and learning</p>
     <div class="row">
         {% for post in posts %}
         <div class="col-lg-4 mt-5">
