--- a/templates/blogs/index.html
+++ b/templates/blogs/index.html
@@ -5,7 +5,7 @@
     <p>I share anything that may help others, technologies I'm using and learning</p>
     <div class="row">
         {% for post in posts %}
-        <div class="col-lg-4 mt-5">
+        <div class="col-xl-4 col-lg-6 col-md-6 col-sm-12 mt-5">
             <a href="{{ post.url }}" class="text-decoration-none">
                 <div class="card" style="width: 25rem; height: 19rem;">
                     <img src="{{ post.cover_image }}" class="card-img-top" alt="...">
