--- a/templates/blogs/portfolio.html
+++ b/templates/blogs/portfolio.html
@@ -18,7 +18,7 @@
 
         for (const repository of repositories) {
           repositoryContainer.innerHTML += `
-            <div class="col-lg-4 mt-5">
+            <div class="col-xl-4 col-lg-6 col-md-6 col-sm-12 mt-5">
               <a href="${repository.html_url}" class="text-decoration-none">
                 <div class="card" style="width: 25rem;">
                   <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRRQi-P_talwhhpYU-hok0qPVGikDJHcOzBkA&usqp=CAU" class="card-img-top" alt="...">
