--- a/templates/index.html
+++ b/templates/index.html
@@ -144,7 +144,7 @@
     </style>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
   </head>
-  <body class="light-mode">    
+  <body>    
 
     <nav class="nav justify-content-center">
       <ul class="menu-items">
