--- a/templates/index.html
+++ b/templates/index.html
@@ -140,7 +140,32 @@
       .dark-mode nav ul li a:hover,
       .dark-mode nav ul li.active a {
         color: #fff;
-      }      
+      }     
+      .light-mode .card {
+        background-color: #ffffff;
+        color: #000000;
+      }
+
+      .light-mode .card-title {
+        color: #000000;
+      }
+
+      .light-mode .card-text {
+        color: #333333;
+      }
+
+      .dark-mode .card {
+        background-color: #333333;
+        color: #ffffff;
+      }
+
+      .dark-mode .card-title {
+        color: #ffffff;
+      }
+
+      .dark-mode .card-text {
+        color: #bbbbbb;
+      }
     </style>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
   </head>
