--- a/templates/blogs/portfolio.html
+++ b/templates/blogs/portfolio.html
@@ -1,9 +1,9 @@
 {% extends 'index.html' %}
 {% block content %}
 <div class="container mt-5 mb-5 light-mode-text animated-text">
-  <h1>Projects ✨</h1>
-  <p>A selection of projects I've worked on, as a student working towards a cloud specialist</p>
-  <div id="repositories" class="row"></div>
+    <h1>Projects ✨</h1>
+    <p>A selection of projects I've worked on, as a student working towards a cloud specialist</p>
+    <div id="repositories" class="row"></div>
 </div>
 
 <script>
@@ -13,7 +13,7 @@ const projects = [
     description: 'On-Premise 3 tier Architecture project carried out by our team during the Cloud Bootcamp',
     topics: ['Django', 'HAproxy', 'Apache', 'MariaDB', 'GlusterFS'],
     imageUrl: 'https://www.finereport.com/en/wp-content/uploads/2020/02/2020022703I.png',
-    githubUrl: "https://github.com",
+    githubUrl: "https://github.com/Waji-97/PROmet-On-Premise-Project",
     docUrl: "https://drive.google.com/file/d/1Kk_EH54jcTXQE-BoMq7W2TunMelmYSa1/view?usp=sharing"
   },
   {
@@ -21,7 +21,7 @@ const projects = [
     description: 'AWS Cloud 3 tier Architecture project carried out by our team during the Cloud Bootcamp',
     topics: ['AWS services', 'Grafana', 'Jenkins', 'Terraform'],
     imageUrl: 'https://serverguy.com/wp-content/uploads/2017/05/maxresdefault-e1557743168984.jpg',
-    githubUrl: "https://github.com",
+    githubUrl: "https://github.com/Waji-97/PROmet-Cloud-Migration-Project",
     docUrl: "https://drive.google.com/file/d/1XoZwLiCMbOYlggtrSxm0afdhvAbhxAMp/view?usp=sharing"
   },
   
